# STM32ECU

./: .gitignore  .project  ADCValues.txt  README.md
ECU/: .cproject  .cproject_org  .project  .project_org  CMakeLists.txt  CMakePresets.json  ECU (ST-Link).launch  ECU - Copy (2).ioc  ECU - Copy.ioc  ECU Debug.launch  ECU.cfg  ECU.elf.launch  ECU.ioc  ECU.launch  ECU_2019.ioc  ECU_bad.ioc  Notes.txt  STM32H743ZI_FLASH.ld  board testing.txt  ecu.csv  mx.scratch  pdm air voltages.txt  project-hierarchy.txt  unused code snippets.txt
ECU/Core/Inc/: FreeRTOSConfig.h  adc.h  comp.h  debug.h  fdcan.h  i2c.h  main.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h  wwdg.h
ECU/Core/Src/: adc.c  comp.c  debug.c  dma.c  fdcan.c  freertos.c  gpio.c  i2c.c  main.c  rng.c  sdmmc.c  spi.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c  wwdg.c
ECU/Debug/: .gitignore  makefile  sources.mk
ECU/Debug/Src/: .gitignore  adc.su  dma.su  ecu.d  ecu.su  ecumain.d  fdcan.su  gpio.su  i2c.su  main.su  sdmmc.su  spi.su  stm32h7xx_hal_msp.su  stm32h7xx_it.su  subdir.mk  system_stm32h7xx.su  tim.su
ECU/Debug/Src/devices/: STRAngle.d  adcecu.d  bms.d  canecu.d  dwt_delay.d  input.d  interrupts.d  inverter.d  ivt.d  output.d  pdm.d  sickencoder.d  subdir.mk  timerecu.d  vhd44780.d
ECU/Debug/Src/states/: configuration.d  idleprocess.d  operationalprocess.d  operationreadyness.d  preoperation.d  runningprocess.d  subdir.mk  tsactiveprocess.d
ECU/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c
ECU/Inc/: adc_hpf19.h  adc_hpf20.h  ecu.h  ecumain.h  fdcan.h  i2c.h  interrupts.h  main.h  sdmmc.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  taskpriorities.h  tim.h  vhd44780.h  wwdg.h
ECU/Inc/devices/: STRAngle.h  adcecu.h  analognode.h  bms.h  brake.h  can_ids.h  canecu.h  debug.h  eeprom.h  freertosstats.h  i2c-lcd.h  imu.h  input.h  interrupts.h  inverter.h  ivt.h  lcd.h  lenzeinverter.h  memorator.h  node.h  node_device.h  output.h  pdm.h  pedal_setup.h  power.h  powerloss.h  powernode.h  shutdown.h  sickencoder.h  siemensinverter.h  timerecu.h  torquecontrol.h  uartecu.h  vhd44780.h  watchdog.h
ECU/Inc/states/: configuration.h  errors.h  idleprocess.h  operationalprocess.h  operationalreadyness.h  operationreadyness.h  preoperation.h  runningprocess.h  tsactiveprocess.h
ECU/Inc/tasks/: adcecu.h  canecu.h  configuration.h  debug.h  eeprom.h  input.h  inverter.h  lcd.h  output.h  power.h  watchdog.h
ECU/Src/: adc.c  dma.c  ecu.c  ecumain.c  fdcan.c  gpio.c  i2c.c  interrupts.c  main.c  sdmmc.c  spi.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c  vhd44780.c  wwdg.c
ECU/Src/A_ert_rtw/: A.c  A.h  A_data.c  A_private.h  A_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
ECU/Src/Controller_design_ert_rtw/: Controller_design.bat  Controller_design.c  Controller_design.h  Controller_design.mk  Controller_design.rsp  Controller_design_data.c  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  defines.txt  modelsources.txt  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
ECU/Src/Controller_design_ert_rtw/html/: Controller_design_c.html  Controller_design_codegen_rpt.html  Controller_design_coderassumptions.html  Controller_design_contents.html  Controller_design_data_c.html  Controller_design_h.html  Controller_design_interface.html  Controller_design_metrics.html  Controller_design_replacements.html  Controller_design_subsystems.html  Controller_design_survey.html  Controller_design_trace.html  Controller_design_traceInfo.js  codeMetrics.mat  define.js  ert_main_c.html  metrics.js  rtwtypes_h.html  traceInfo.mat  traceInfo_flag.js
ECU/Src/Controller_design_ert_rtw/tmwinternal/: simulink_cache.xml
ECU/Src/RTT/: SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
ECU/Src/SOC/GhettoSOC_ert_rtw/: GhettoSOC.bat  GhettoSOC.c  GhettoSOC.h  GhettoSOC.mk  GhettoSOC.rsp  GhettoSOC_comp.rsp  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  ert_main.cex  modelsources.txt  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  setup_msvc.bat
ECU/Src/devices/: SOC.c  STRAngle.c  adcecu.c  analognode.c  bms.c  brake.c  canecu.c  debug.c  dwt_delay.c  eeprom.c  freertosstats.c  i2c-lcd.c  imu.c  input.c  interrupts.c  inverter.c  ivt.c  lcd.c  lenzeinverter.c  memorator.c  node.c  node_device.c  node_devices.c  output.c  pdm.c  power.c  powerloss.c  powernode.c  shutdown.c  sickencoder.c  siemensinverter.c  timerecu.c  torquecontrol.c  uartecu.c  vhd44780.c  watchdog.c
ECU/Src/matlab/Regeneration_ert_rtw/: Regeneration.c  Regeneration.h  Regeneration_data.c  buildInfo.mat  rtwtypes.h
ECU/Src/matlab/TorqueVectoring_ert_rtw/: TorqueVectoring.c  TorqueVectoring.h  TorqueVectoring_data.c  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  rtwtypes.h
ECU/Src/matlab/TractionControl_ert_rtw/: TractionControl.c  TractionControl.h  TractionControl_data.c  buildInfo.mat  rtwtypes.h
ECU/Src/regen/RegenCS_ert_rtw/: RegenCS.bat  RegenCS.c  RegenCS.h  RegenCS.mk  RegenCS.rsp  RegenCS_data.c  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cignore  modelsources.txt  (+3 more)
ECU/Src/states/: configuration.c  errors.c  idleprocess.c  operationalprocess.c  operationalreadyness.c  operationreadyness.c  preoperation.c  runningprocess.c  tsactiveprocess.c
ECU/Src/tasks/: adcecu.c  canecu.c  configuration.c  debug.c  eeprom.c  input.c  inverter.c  lcd.c  output.c  power.c  watchdog.c
ECU/cmake/: st-project.cmake
ECU/startup/: startup_stm32h743xx.s
(+163 files in other folders)
